--- a/data/src/app/app.component.html
+++ b/data/src/app/app.component.html
@@ -15,13 +15,13 @@
 
 
 
-<mat-form-field>
+<!-- <mat-form-field>
   <mat-label>Choose a date</mat-label>
   <input matInput [matDatepicker]="picker">
   <mat-hint>MM/DD/YYYY</mat-hint>
   <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker [opened]="true"></mat-datepicker>
-</mat-form-field>
+</mat-form-field> -->
 
 
 <mat-card class="example-card">
@@ -43,7 +43,8 @@
 </mat-card>
 
 
-<router-outlet></router-outlet>
 
+
+ 
 
 <router-outlet></router-outlet>
